--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="name">Name</string>
     <string name="content">Content</string>
     <string name="favorite">Favorite</string>
+    <string name="no_trailer">No Trailer</string>
 
 
 </resources>
