--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="favorite">Favorite</string>
     <string name="no_trailer">No Trailer</string>
     <string name="now_playing">Now playing</string>
+    <string name="whatsnew">What\'s new ?</string>
+    <string name="gotit">Got it</string>
 
 
 </resources>
