--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="now_playing">Now playing</string>
     <string name="whatsnew">What\'s new ?</string>
     <string name="gotit">Got it</string>
+    <string name="close">Close</string>
 
 
 </resources>
